Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109832

QMYSQL plugin no longer works with older supported versions of MySQL/MariaDB

XMLWordPrintable

    • 5bc61ec5d (dev), e4ef4fd3a (6.5), 140ccc0e6 (tqtc/lts-6.2), 03542e413 (6.4), fed1b172f (tqtc/lts-5.15)

      The fix for QTBUG-101680 involves checking for the MYSQL_TYPE_JSON enum. Supporting this enum requires MySQL 5.7.9 or higher:

       

      However, our documentation says that we support older versions:

        For Gerrit Dashboard: QTBUG-109832
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            skoh-qt Sze Howe Koh
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes